--- a/firebase.json
+++ b/firebase.json
@@ -1,25 +1,14 @@
 {
+  "functions": { "source": "functions" },
   "hosting": {
     "public": "client/dist",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
-      { "source": "/api/**", "function": "api" },
+      {
+        "source": "/api/**",
+        "function": { "functionId": "api", "region": "us-central1" }
+      },
       { "source": "**", "destination": "/index.html" }
     ]
-  },
-
-  "functions": [
-    {
-      "source": "functions",
-      "codebase": "default",
-      "disallowLegacyRuntimeConfig": true,
-      "ignore": [
-        "node_modules",
-        ".git",
-        "firebase-debug.log",
-        "firebase-debug.*.log",
-        "*.local"
-      ]
-    }
-  ]
+  }
 }
