Added additional ui table and api endpoints.

--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,7 @@
 VITE_API_BASE_URL=http://localhost:3000
+VITE_FIREBASE_API_KEY="AIzaSyAvRQLlpBoTPbhJmMcZh-qy47AO1546RUw",
+VITE_FIREBASE_AUTH_DOMAIN="options-trading-agent.firebaseapp.com",
+VITE_FIREBASE_PROJECT_ID="options-trading-agent",
+VITE_FIREBASE_STORAGE_BUCKET="options-trading-agent.firebasestorage.app",
+VITE_FIREBASE_MESSAGING_SENDER_ID="259718129876",
+VITE_FIREBASE_APP_ID="1:259718129876:web:d4bc8b2ad7527a5171f341"
