--- a/functions/.env
+++ b/functions/.env
@@ -1,4 +1,4 @@
 QUOTE_PROVIDER=tradier
-TRADIER_ENV=sandbox
+TRADIER_ENV=live
 # optional override if you want:
 TRADIER_BASE_URL=https://sandbox.tradier.com/v1
