--- a/functions/.env
+++ b/functions/.env
@@ -2,3 +2,10 @@ QUOTE_PROVIDER=tradier
 TRADIER_ENV=live
 # optional override if you want:
 TRADIER_BASE_URL=https://api.tradier.com/v1
+MAX_PREMIUM_CAP=100
+MIN_DTE=21
+MAX_DTE=35
+TAKE_PROFIT_PCT=0.6
+STOP_LOSS_PCT=0.5
+
+
